<resources>
    <string name="app_name">GuestApp</string>
    <!-- Menu Items -->
    <string name="menu_item_about">About</string>

    <!-- Title of all pages (fragments) -->
    <string name="title_guest_app">Guest App</string>
    <string name="title_about">About Guest App</string>
    <string name="title_profile">Profile</string>
    <string name="title_smart_key">Smart Key</string>
    <string name="title_smart_key_code">Smart Key Code</string>
    <string name="title_smart_key_usage">Smart Key Usage</string>
    <string name="title_rez_history">Reservation History</string>
    <string name="title_payment">Payment</string>
    <string name="title_guest_services">Guest Services</string>
    <string name="title_help_support">Help and Support</string>

    <!-- Elements of Title Page -->
    <string name="welcome_text">Hello Mr. Guest!!</string>
    <string name="welcome_sub_text">Welcome to Hotel Upskill</string>
    <string name="label_rez_no">Reservation No:</string>
    <string name="label_room_no">Room No:</string>
    <string name="label_check_in">Check-In at:</string>
    <string name="label_check_out">Check-Out at:</string>

    <string name="button_new_rez">Create Reservation</string>
    <string name="button_check_in">Check-In</string>
    <string name="button_check_out">Check-Out</string>
    <string name="button_change_room">Change Room</string>
    <string name="button_smart_key">Smart Key</string>

    <!-- Elements of Smart Key Page -->
    <string name="button_smart_key_code">Generate Smart Key Code</string>
    <string name="button_smart_key_usage">Show Smart Key Usage</string>

    <!-- Elements of Smart Key Code Page -->
    <string name="text_smart_key_code_expired">Your code has expired. Re&#8211;generating&#8230;</string>
    <string name="text_smart_key_code_header">Please scan this Code to Door Lock %s</string>
    <string name="text_smart_key_code_expiry_times">Your code will expire in</string>
    <string name="button_smart_key_code_share">Share Smart Key Code</string>

    <!-- Elements of Smart Key Code Usage Page -->
    <string name="text_smart_key_usage_empty">Seems you have never been to your Room!!
    \n\n Are you not Interested???</string>

    <!-- Elements of Reservation History Page -->
    <string name="text_rez_history_empty">No Bookings yet!!</string>

    <!-- Elements of About Me page -->
    <string name="text_about_image">About Guest App</string>
    <string name="text_about">Guest App is your virtual Receptionist.
        It will help you manage your Hotel stay events from Booking to Check-out without making you wait at Front desk/Over Call.
        \n\nYou have an added option of using your Mobile phone as the personalized, Secure and Shareable Room Key.
        \n\nKey Features:
        \n - Book Reservation
        \n - Check-In / Check-Out
        \n - Change Room
        \n - Unlock Room (with usage history)
        \n - Track Reservation history
        \n - Manage Profile
    </string>
    <string name="text_about_footer">"Wishing you a Wonderful Stay !!"</string>

    <!-- Elements of Profile Page -->
    <string name="text_profile_image">Profile Image</string>
    <string name="text_profile_name">Mr. Happy Guest</string>
    <string name="label_profile_gender">Gender:</string>
    <string name="label_profile_dob">Date of Birth:</string>
    <string name="label_profile_email">Email:</string>
    <string name="label_profile_contact">Contact:</string>
    <string name="label_profile_address">Address:</string>
    <string name="label_profile_nationality">Nationality:</string>
    <string name="label_profile_languages">Spoken Languages:</string>
    <string name="label_profile_traveller_rank">Traveller Rank:</string>
    <string name="label_profile_traveller_points">Traveller Points:</string>
    <string name="text_address">
        3rd Floor, Navigator Building
        \nITPB, Whitefield
        \nBangalore - 560066
        \nKarnataka, India
    </string>
    <string name="text_male">Male</string>
    <string name="text_dob">Jan 1st, 1980</string>
    <string name="text_email">happy.guest@email.com</string>
    <string name="text_contact">(987)&#8211;654&#8211;3210</string>
    <string name="text_nationality">India</string>
    <string name="text_languages">English, Hindi</string>
    <string name="text_traveller_rank">Travel Bunny</string>
    <string name="text_traveller_points">1234 points</string>
    <string name="button_redeem">Redeem</string>

    <!-- Elements of Dummy Pages -->
    <string name="text_payment">Payment Methods and History</string>
    <string name="text_guest_services">Concierge Services</string>
    <string name="text_support">Help and Support\n\n\nFor you, With You!!</string>
    <string name="text_under_construction">Under Construction!!</string>
    <string name="wake_up_calls">Wake–Up Calls</string>
    <string name="order_food_beverages"><![CDATA[Order Food & Beverages]]></string>
    <string name="house_keeping">House–Keeping</string>
    <string name="transportation">Transportation</string>
    <string name="hotel_facilities">Hotel Facilities</string>
    <string name="banquets_meetings"><![CDATA[Banquets & Meetings]]></string>

</resources>
