<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/menu_profile">
        <item
            android:id="@+id/profileFragment"
            android:icon="@drawable/ic_profile"
            android:title="@string/title_profile" />
        <item
            android:id="@+id/reservationHistoryFragment"
            android:icon="@drawable/ic_history"
            android:title="@string/title_rez_history" />

        <item
            android:id="@+id/paymentFragment"
            android:icon="@drawable/ic_digital_payment"
            android:title="@string/title_payment" />
    </group>

    <group android:id="@+id/menu_support">
        <item
            android:id="@+id/guestServicesFragment"
            android:icon="@drawable/ic_guest_services_1"
            android:title="@string/title_guest_services" />

        <item
            android:id="@+id/helpAndSupportFragment"
            android:icon="@drawable/ic_customer_care"
            android:title="@string/title_help_support" />
    </group>

    <group android:id="@+id/menu_about">
        <item
            android:id="@+id/aboutFragment"
            android:icon="@drawable/ic_about"
            android:title="@string/title_about" />
    </group>

</menu>