<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/titleFragment">

    <fragment
        android:id="@+id/titleFragment"
        android:name="com.amitesh.guestapp.TitleFragment"
        android:label="@string/title_guest_app"
        tools:layout="@layout/fragment_title">
        <action
            android:id="@+id/action_titleFragment_to_smartKeyFragment"
            app:destination="@id/smartKeyFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.amitesh.guestapp.AboutFragment"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/smartKeyFragment"
        android:name="com.amitesh.guestapp.SmartKeyFragment"
        android:label="@string/title_smart_key"
        tools:layout="@layout/fragment_smart_key">
        <action
            android:id="@+id/action_smartKeyFragment_to_smartKeyCodeFragment"
            app:destination="@id/smartKeyCodeFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
        <action
            android:id="@+id/action_smartKeyFragment_to_smartKeyUsageFragment"
            app:destination="@id/smartKeyUsageFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
        <argument
            android:name="reservationNo"
            app:argType="string" />
        <argument
            android:name="roomNo"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/smartKeyCodeFragment"
        android:name="com.amitesh.guestapp.SmartKeyCodeFragment"
        android:label="@string/title_smart_key_code"
        tools:layout="@layout/fragment_smart_key_code">
        <action
            android:id="@+id/action_smartKeyCodeFragment_to_smartKeyFragment"
            app:destination="@id/smartKeyFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <argument
            android:name="reservationNo"
            app:argType="string" />
        <argument
            android:name="roomNo"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/smartKeyUsageFragment"
        android:name="com.amitesh.guestapp.SmartKeyUsageFragment"
        android:label="@string/title_smart_key_usage"
        tools:layout="@layout/fragment_smart_key_usage">
        <action
            android:id="@+id/action_smartKeyUsageFragment_to_smartKeyFragment"
            app:destination="@id/smartKeyFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <argument
            android:name="reservationNo"
            app:argType="string" />
    </fragment>
</navigation>