<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragment.AboutFragment">

    <ScrollView
        android:id="@+id/aboutScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/aboutConstraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">

            <ImageView
                android:id="@+id/aboutImage"
                android:layout_width="0dp"
                android:layout_height="250dp"
                android:layout_marginStart="@dimen/horizontal_margin"
                android:layout_marginTop="@dimen/vertical_margin"
                android:layout_marginEnd="@dimen/horizontal_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/text_about_image"
                app:srcCompat="@drawable/about_guest_app" />

            <TextView
                android:id="@+id/aboutTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_16dp"
                android:layout_marginTop="@dimen/vertical_margin"
                android:layout_marginEnd="@dimen/size_16dp"
                android:layout_marginBottom="@dimen/vertical_margin"
                android:text="@string/text_about"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/aboutFooterTV"
                app:layout_constraintTop_toBottomOf="@+id/aboutImage" />

            <TextView
                android:id="@+id/aboutFooterTV"
                style="@style/FooterTheme"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_8dp"
                android:layout_marginTop="@dimen/vertical_margin"
                android:layout_marginEnd="@dimen/size_8dp"
                android:layout_marginBottom="@dimen/vertical_margin"
                android:gravity="center_horizontal"
                android:text="@string/text_about_footer"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/aboutTV" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>